# termCA

./: Cargo.toml  LICENSE  README.md
src/: app.rs  events.rs  main.rs  simulations.rs  ui.rs
src/events/: ant_events.rs  elementary_events.rs  game_of_life_events.rs  main_events.rs  mod.rs
src/simulations/: ant.rs  elementary.rs  game_of_life.rs  mod.rs
src/ui/: ant_ui.rs  edit_ui.rs  elementary_ui.rs  game_of_life_ui.rs  help_ui.rs  main_ui.rs  mod.rs
