[package]
name = "termCA"
version = "0.1.0"
edition = "2021"
description = "Interactive TUI Cellular Automata simulator"
license = "MIT OR Apache-2.0"
readme = "README.md"
homepage = "https://github.com/fabiooo4/termCA"
repository = "https://github.com/fabiooo4/termCA"
keywords = ["tui", "cellular", "automata", "cli", "simulation"]
categories = ["games", "simulation"]

[dependencies]
crossterm = "0.28.1"
rand = "0.8.5"
ratatui = "0.29.0"
rayon = "1.10.0"
tui-big-text = "0.7.0"
tui-input = "0.10.1"
tui-scrollview = "0.5.0"
